system-deployment-configuration/data-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-collector
  labels:
    app: data-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-collector
  template:
    metadata:
      labels:
        app: data-collector
    spec:
      containers:
        - name: data-collector
          image: company-name/data-collector
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              cpu: 800m
              memory: 2048Mi
      restartPolicy: Always
