system-deployment-configuration/tg-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tg-bot
  labels:
    app: tg-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tg-bot
  template:
    metadata:
      labels:
        app: tg-bot
    spec:
      containers:
        - name: tg-bot
          image: company-name/tg-bot
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi
      restartPolicy: Always
