system-deployment-configuration/web-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui
  labels:
    app: web-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-ui
  template:
    metadata:
      labels:
        app: web-ui
    spec:
      containers:
        - name: web-ui
          image: company-name/web-ui
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
      restartPolicy: Always
