system-deployment-configuration/web-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ui-service
spec:
  selector:
    app: web-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
