system-deployment-configuration/web-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: dashboard.company-name.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-ui-service
                port:
                  number: 80
